HOCS-1463 : Record an Urgent & Exceptional Payment (UEP), optimised null check